--- a/SQL/README
+++ b/SQL/README
@@ -1,7 +1,7 @@
 # SQL - Crew database
 This folder contains files with the SQL queries that are solution to the problem called "Crew database", and test data used for testign the solution.
 
-                                                      Problem
+## Problem
 
   You are an architect of a database system for a ari company. Your task is to create database architecture and then to prove your solution is right by few sql queries as given later.
   When there are some concerns about how to implement some features, please put a comment in SQL, and we would discuss it later on. 
